--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     </properties>
 
    <dependencies>
+       <dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.5.3</version>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
